fix: add `orderby` to pagination to prevent sorting issues
To reproduce:
- first create 51 folders like x1, x2... x51
- then after that create one folder like a1
- load page
  - see x1 - x50 are listed
  - go to page 2
  - see x50 and x51 are listed
  - go back to page 1
  - see that a1 is now listed
